--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 		"build": "nuxt build",
 		"dev": "nuxt dev",
 		"generate": "nuxt generate",
-		"preview": "nuxt preview"
+		"preview": "nuxt preview",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
 		"nuxt": "^3.0.0-rc.4"
