--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"scripts": {
-		"build": "nuxt build",
+		"build": "npx playwright install && nuxt build",
 		"dev": "nuxt dev",
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
@@ -9,7 +9,8 @@
 	},
 	"devDependencies": {
 		"@nuxtjs/supabase": "^0.3.0",
-		"nuxt": "^3.3.1"
+		"nuxt": "^3.3.1",
+		"nuxt-og-image": "^1.5.5"
 	},
 	"dependencies": {
 		"@vercel/analytics": "^0.1.11"
