--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@nuxtjs/supabase": "^0.3.5",
-		"nuxt": "^3.5.1",
+		"@nuxtjs/supabase": "^0.3.6",
+		"nuxt": "^3.5.2",
 		"nuxt-og-image": "^1.5.9"
 	},
 	"dependencies": {
+		"@onesignal/onesignal-vue3": "^1.0.2",
 		"@vercel/analytics": "^1.0.1"
 	}
 }
