--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@nuxtjs/supabase": "^0.3.6",
-		"nuxt": "^3.5.2",
-		"nuxt-og-image": "^1.5.9"
+		"@nuxtjs/supabase": "^0.3.7",
+		"nuxt": "^3.6.0"
 	},
 	"dependencies": {
-		"@onesignal/onesignal-vue3": "^1.0.2",
 		"@vercel/analytics": "^1.0.1"
 	}
 }
