--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"nuxt": "^3.6.0"
 	},
 	"dependencies": {
-		"@vercel/analytics": "^1.0.1"
+		"@vercel/analytics": "^1.0.1",
+		"html-to-image": "^1.11.11"
 	}
 }
