--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@vercel/analytics": "^1.0.1",
+		"base64-arraybuffer": "^1.0.2",
 		"html-to-image": "^1.11.11"
 	}
 }
