--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,8 @@
 {
-	"recommendations": ["esbenp.prettier-vscode", "vue.volar"]
+	"recommendations": [
+		"esbenp.prettier-vscode",
+		"amatiasq.sort-imports",
+		"vue.vscode-typescript-vue-plugin",
+		"dbaeumer.vscode-eslint"
+	]
 }
