--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
 		"checks": "prettier --write . && npm run lint -- --fix && npm run typecheck && npm test",
-		"format": "prettier",
+		"format": "prettier --check .",
 		"lint": "eslint . --ignore-path .gitignore --ext .ts --ext .js --ext .vue",
 		"typecheck": "nuxt typecheck",
 		"test": "cypress run"
@@ -19,7 +19,7 @@
 		"@nuxtjs/supabase": "^1",
 		"base64-arraybuffer": "^1",
 		"cypress": "^13",
-		"eslint": "^8.55.0",
+		"eslint": "^8",
 		"eslint-config-prettier": "^9",
 		"html-to-image": "^1",
 		"nuxt": "^3",
