--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Checks
 
 on:
   push:
@@ -11,7 +11,7 @@ env:
   CYPRESS_BASE_URL: http://[::]:3000
 
 jobs:
-  cypress-run:
+  code-quality-checks:
     runs-on: ubuntu-latest
 
     steps:
