test and lint scripts (#8)
* test and lint scripts
* use baseUrl for cypress
* simple ci checks

--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
 	"private": true,
 	"scripts": {
+		"clean": "nuxt cleanup",
 		"build": "nuxt build",
+		"start": "nuxt start",
 		"dev": "nuxt dev",
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
-		"fix": "prettier --write .",
-		"lint": "eslint"
+		"checks": "prettier --write . && npm run lint -- --fix && npm run typecheck && npm test",
+		"format": "prettier --check .",
+		"lint": "eslint . --ignore-path .gitignore --ext .ts --ext .js --ext .vue",
+		"typecheck": "nuxt typecheck",
+		"test": "cypress run"
 	},
 	"devDependencies": {
 		"@nuxt/eslint-config": "^0.2.0",
@@ -14,7 +19,7 @@
 		"@nuxtjs/supabase": "^1",
 		"base64-arraybuffer": "^1",
 		"cypress": "^13",
-		"eslint": "^8.55.0",
+		"eslint": "^8",
 		"eslint-config-prettier": "^9",
 		"html-to-image": "^1",
 		"nuxt": "^3",
@@ -29,5 +34,8 @@
 			"vue/multi-word-component-names": 0,
 			"vue/no-multiple-template-root": 0
 		}
+	},
+	"dependencies": {
+		"npm": "^10.2.4"
 	}
 }
