--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
 		"format": "prettier --check .",
 		"lint": "eslint . --ignore-path .gitignore --ext .ts --ext .js --ext .vue",
 		"typecheck": "nuxt typecheck",
-		"test": "cypress run"
+		"test": "cypress run",
+		"supabase:login": "npx supabase login",
+		"supabase:types": "npx supabase gen types typescript --project-id 'fbyhdhmmctwoorirepai' --schema public > utils/database.types.ts"
 	},
 	"devDependencies": {
 		"@nuxt/eslint-config": "^0.2.0",
+		"@nuxt/image": "^1",
 		"@nuxtjs/eslint-module": "^4",
 		"@nuxtjs/supabase": "^1",
 		"base64-arraybuffer": "^1",
@@ -34,8 +37,5 @@
 			"vue/multi-word-component-names": 0,
 			"vue/no-multiple-template-root": 0
 		}
-	},
-	"dependencies": {
-		"npm": "^10.2.4"
 	}
 }
