--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
 		"@nuxt/image": "^1",
 		"@nuxtjs/eslint-module": "^4",
 		"@nuxtjs/supabase": "^1",
+		"@typescript-eslint/eslint-plugin": "^7.8.0",
 		"base64-arraybuffer": "^1",
 		"cypress": "^13",
-		"eslint": "^9",
+		"eslint": "^8",
 		"eslint-config-prettier": "^9",
 		"html-to-image": "^1",
 		"nuxt": "^3",
