Cypress tests - browse and vote

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
 		"generate": "nuxt generate",
 		"prepare": "nuxt prepare",
 		"preview": "nuxt preview",
-		"checks": "prettier --write . && npm run lint -- --fix && npm run typecheck && npm test",
+		"checks": "prettier --write . && npm run lint -- --fix && npm run typecheck && npm run e2e",
 		"format": "prettier --check .",
 		"lint": "eslint .",
 		"typecheck": "nuxt typecheck",
-		"test": "cypress run",
+		"e2e": "cypress run",
+		"cypress": "cypress open",
 		"supabase:login": "npx supabase login",
 		"supabase:types": "npx supabase gen types typescript --project-id 'fbyhdhmmctwoorirepai' --schema public > utils/database.types.ts"
 	},
