Cypress testing with intercepts

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"lint": "eslint .",
 		"typecheck": "nuxt typecheck",
 		"e2e": "cypress run",
-		"cypress": "cypress open",
+		"cy": "cypress open",
 		"supabase:login": "npx supabase login",
 		"supabase:types": "npx supabase gen types typescript --project-id 'fbyhdhmmctwoorirepai' --schema public > utils/database.types.ts"
 	},
