--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"generate": "nuxt generate",
 		"prepare": "nuxt prepare",
 		"preview": "nuxt preview",
-		"checks": "prettier --write . && npm run lint -- --fix && npm run typecheck && npm run e2e",
+		"checks": "npm run supabase:types && prettier --write . && npm run lint -- --fix && npm run typecheck && npm run e2e",
 		"format": "prettier --check .",
 		"lint": "eslint .",
 		"typecheck": "nuxt typecheck",
