--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"generate": "nuxt generate",
 		"prepare": "nuxt prepare",
 		"preview": "nuxt preview",
-		"checks": "npm run supabase:types && prettier --write . && npm run lint -- --fix && npm run typecheck && npm run e2e",
+		"checks": "npm run supabase:types && npm run typecheck && npm run lint -- --fix && prettier --write . && npm run e2e",
 		"format": "prettier --check .",
 		"lint": "eslint .",
 		"typecheck": "nuxt typecheck",
@@ -19,7 +19,7 @@
 		"upgrade": "npx nuxi@latest upgrade --force"
 	},
 	"devDependencies": {
-		"@nuxt/eslint": "^0.7.4",
+		"@nuxt/eslint": "^0.7.5",
 		"@nuxt/image": "^1",
 		"@nuxtjs/supabase": "^1",
 		"base64-arraybuffer": "^1",
