Install test dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,12 @@ node_modules
 .cache
 .output
 .env
+.env.local
 .DS_Store
 dist
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
