--- a/package.json
+++ b/package.json
@@ -14,20 +14,28 @@
 		"typecheck": "nuxt typecheck",
 		"e2e": "cypress run",
 		"cy": "cypress open",
+		"test": "vitest",
 		"supabase:login": "npx supabase login",
 		"supabase:types": "npx supabase gen types typescript --project-id 'fbyhdhmmctwoorirepai' --schema public > app/utils/database.types.ts",
 		"upgrade": "npx nuxi@latest upgrade --force"
 	},
 	"devDependencies": {
-		"@nuxt/eslint": "^0.7.5",
+		"@nuxt/eslint": "^1",
 		"@nuxt/image": "^1",
+		"@nuxt/test-utils": "^3",
 		"@nuxtjs/supabase": "^1",
+		"@playwright/test": "^1.52.0",
+		"@types/node": "^22",
+		"@vue/test-utils": "^2",
 		"base64-arraybuffer": "^1",
 		"cypress": "^14",
 		"eslint": "^9",
 		"eslint-config-prettier": "^10",
+		"happy-dom": "^17",
 		"html-to-image": "^1",
-		"nuxt": "^3.15.2",
-		"prettier": "^3"
+		"nuxt": "^3.16.2",
+		"playwright-core": "^1",
+		"prettier": "^3",
+		"vitest": "^3"
 	}
 }
