add polar nuxt module

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+POLAR_ACCESS_TOKEN=
+POLAR_CHECKOUT_SUCCESS_URL=
+POLAR_SERVER=
+POLAR_PRODUCT_ID=
 SITE_URL=http://localhost:3000
 SUPABASE_URL=
 SUPABASE_KEY=
