--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"e2e": "cypress run",
 		"cy": "cypress open",
 		"supabase:login": "npx supabase login",
-		"supabase:types": "npx supabase gen types typescript --project-id 'fbyhdhmmctwoorirepai' --schema public > app/utils/database.types.ts",
+		"supabase:types": "npx supabase gen types typescript --project-id 'fbyhdhmmctwoorirepai' --schema public > shared/types/database.types.ts",
 		"upgrade": "npx nuxi@latest upgrade --force"
 	},
 	"devDependencies": {
@@ -31,6 +31,8 @@
 		"prettier": "^3"
 	},
 	"dependencies": {
-		"@polar-sh/nuxt": "^0.3.1"
+		"@polar-sh/checkout": "^0.1.11",
+		"@polar-sh/nuxt": "^0.3.1",
+		"@polar-sh/sdk": "^0.33.1"
 	}
 }
