--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"eslint": "^9",
 		"eslint-config-prettier": "^10",
 		"html-to-image": "^1",
-		"nuxt": "3.15.2",
+		"nuxt": "^4.0.0-alpha.2",
 		"prettier": "^3"
 	}
 }
