--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
 		"amatiasq.sort-imports",
 		"dbaeumer.vscode-eslint",
 		"antfu.goto-alias",
-		"vue.volar"
+		"vue.volar",
+		"streetsidesoftware.code-spell-checker"
 	]
 }
