polar order webhook

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 POLAR_ACCESS_TOKEN=
 POLAR_SERVER=
-POLAR_PRODUCT_ID=
+POLAR_URL=https://sandbox-api.polar.sh
+POLAR_CHECKOUT_PATH=
+POLAR_WEBHOOK_SECRET=
 SITE_URL=http://localhost:3000
 SUPABASE_URL=
 SUPABASE_KEY=
+SUPABASE_SERVICE_KEY=
+NGROK_FORWARDING_URL=
