ngroc .env setup

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,18 @@
+# Site
+SITE_URL=http://localhost:3000
+
+# Polar
 POLAR_ACCESS_TOKEN=
 POLAR_SERVER=
 POLAR_URL=https://sandbox-api.polar.sh
 POLAR_CHECKOUT_PATH=
 POLAR_WEBHOOK_SECRET=
-SITE_URL=http://localhost:3000
+
+# Supabase
 SUPABASE_URL=
 SUPABASE_KEY=
 SUPABASE_SERVICE_KEY=
-NGROK_FORWARDING_URL=
+
+# Ngrok
+## Do not include https://
+NGROK_FORWARDING_DOMAIN=
