fix env vars for polar

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,7 @@
 SITE_URL=http://localhost:3000
 
 # Polar
-POLAR_ACCESS_TOKEN=
-POLAR_SERVER=
-POLAR_URL=https://sandbox-api.polar.sh
-POLAR_CHECKOUT_PATH=
+POLAR_CHECKOUT_LINK=
 POLAR_WEBHOOK_SECRET=
 
 # Supabase
