User VERCEL_URL

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,15 @@
-# Site
-SITE_URL=http://localhost:3000
+# Domain
+## For local development use ngrok forwarding domain without the https://
+DOMAIN=
 
 # Polar
+## Include https:// but not trailing /
 POLAR_CHECKOUT_LINK=
 POLAR_WEBHOOK_SECRET=
 
 # Supabase
-SUPABASE_PROJECT_ID=
+## Include https:// but not trailing /
 SUPABASE_URL=
+SUPABASE_PROJECT_ID=
 SUPABASE_KEY=
 SUPABASE_SERVICE_KEY=
-
-# Ngrok
-## Do not include https://
-NGROK_FORWARDING_DOMAIN=
