--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
 		"build": "nuxt build",
 		"start": "nuxt start",
 		"dev": "nuxt dev",
-		"dev:https": "NODE_TLS_REJECT_UNAUTHORIZED=0 nuxt dev --https --ssl-cert localhost.pem --ssl-key localhost-key.pem",
 		"generate": "nuxt generate",
 		"prepare": "nuxt prepare",
 		"preview": "nuxt preview",
@@ -18,17 +17,17 @@
 		"supabase:login": "npx supabase login",
 		"supabase:types": "source .env && npx supabase gen types typescript --project-id ${SUPABASE_PROJECT_ID} --schema public > shared/types/database.ts",
 		"upgrade": "npx nuxi@latest upgrade --force",
-		"ngrok": "source .env && ngrok http http://localhost:3000 --url=https://${NGROK_FORWARDING_URL}"
+		"ngrok": "source .env && ngrok http http://localhost:3000 --url=https://${DOMAIN}"
 	},
 	"dependencies": {
 		"@nuxt/image": "^1",
 		"@nuxtjs/supabase": "^1",
-		"@polar-sh/checkout": "^0.1.11",
-		"@polar-sh/nuxt": "^0.3.1",
-		"@polar-sh/sdk": "^0.34.2",
+		"@polar-sh/checkout": "^0.1",
+		"@polar-sh/nuxt": "^0.3",
+		"@polar-sh/sdk": "^0.34",
 		"base64-arraybuffer": "^1",
 		"html-to-image": "^1",
-		"nuxt": "^4.0.0-alpha.2"
+		"nuxt": "^4.0.0-rc.0"
 	},
 	"devDependencies": {
 		"@nuxt/eslint": "^1",
