--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,15 @@
-SITE_URL=http://localhost:3000
+# Domain
+## For local development use ngrok forwarding domain without the https://
+DOMAIN=
+
+# Polar
+## Include https:// but not trailing /
+POLAR_CHECKOUT_LINK=
+POLAR_WEBHOOK_SECRET=
+
+# Supabase
+## Include https:// but not trailing /
 SUPABASE_URL=
+SUPABASE_PROJECT_ID=
 SUPABASE_KEY=
+SUPABASE_SERVICE_KEY=
