--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-	"cSpell.words": ["Postgrest"]
+	"cSpell.words": [
+		"choosername",
+		"ngrok",
+		"nuxi",
+		"nuxt",
+		"nuxtjs",
+		"postgrest",
+		"supabase"
+	]
 }
