--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-	"private": true,
-	"scripts": {
-		"clean": "nuxt cleanup",
-		"build": "nuxt build",
-		"start": "nuxt start",
-		"dev": "nuxt dev",
-		"generate": "nuxt generate",
-		"prepare": "nuxt prepare",
-		"preview": "nuxt preview",
-		"checks": "npm run supabase:types && npm run typecheck && npm run lint -- --fix && prettier --write . && npm run e2e",
-		"format": "prettier --check .",
-		"lint": "eslint .",
-		"typecheck": "nuxt typecheck",
-		"e2e": "cypress run",
-		"cy": "cypress open",
-		"supabase:login": "npx supabase login",
-		"supabase:types": "npm run supabase:login && source .env && npx supabase gen types typescript --project-id ${SUPABASE_PROJECT_ID} --schema public > shared/types/database.ts",
-		"upgrade": "npx nuxi@latest upgrade --force",
-		"ngrok": "source .env && ngrok http http://localhost:3000 --url=https://${DOMAIN}"
-	},
-	"dependencies": {
-		"@nuxt/image": "^1",
-		"@nuxtjs/supabase": "^1",
-		"@polar-sh/checkout": "^0.1",
-		"@polar-sh/nuxt": "^0.3",
-		"@polar-sh/sdk": "^0.34",
-		"base64-arraybuffer": "^1",
-		"html-to-image": "^1",
-		"nuxt": "^4.0.0-rc.0"
-	},
-	"devDependencies": {
-		"@nuxt/eslint": "^1",
-		"cypress": "^14",
-		"eslint": "^9",
-		"eslint-config-prettier": "^10",
-		"prettier": "^3"
-	}
+  "private": true,
+  "scripts": {
+    "clean": "nuxt cleanup",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "prepare": "nuxt prepare",
+    "preview": "nuxt preview",
+    "checks": "npm run supabase:types && npm run typecheck && npm run lint -- --fix && prettier --write . && npm run e2e",
+    "format": "prettier --check .",
+    "lint": "eslint .",
+    "typecheck": "nuxt typecheck",
+    "e2e": "cypress run",
+    "cy": "cypress open",
+    "supabase:login": "npx supabase login",
+    "supabase:types": "npm run supabase:login && source .env && npx supabase gen types typescript --project-id ${SUPABASE_PROJECT_ID} --schema public > shared/types/database.ts",
+    "upgrade": "npx nuxi@latest upgrade --force",
+    "ngrok": "source .env && ngrok http http://localhost:3000 --url=https://${DOMAIN}"
+  },
+  "dependencies": {
+    "@nuxt/image": "^1",
+    "@nuxtjs/supabase": "^1",
+    "@polar-sh/checkout": "^0.1",
+    "@polar-sh/nuxt": "^0.3",
+    "@polar-sh/sdk": "^0.34",
+    "base64-arraybuffer": "^1",
+    "html-to-image": "^1",
+    "nuxt": "^3.17.6"
+  },
+  "devDependencies": {
+    "@nuxt/eslint": "^1",
+    "cypress": "^14",
+    "eslint": "^9",
+    "eslint-config-prettier": "^10",
+    "prettier": "^3"
+  },
+  "overrides": {
+    "@vercel/nft": "^0.27.4"
+  }
 }
